<resources>
    <string name="app_name">Mvk</string>

    <string name="kilobyte_short">kB</string>
    <string name="megabyte_short">MB</string>
    <string name="second_short">s</string>

    <string name="action_search">Search</string>

    <string name="settings">Settings</string>

    <!-- Strings related to navigation drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_my_audios_title">My audios</string>

    <!-- General errors string -->
    <string name="network_is_unavailable">Network is unavailable. Check your connection</string>
    <string name="network_error_occurred">A network error occurred. Try again later</string>

    <!-- Strings related to log in fragment -->
    <string name="phone_or_email">Phone or email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="this_field_required">This field required</string>
    <string name="username_or_password_incorrect">Login or password incorrect</string>
    <string name="logging_in">Logging in</string>

    <!-- Strings related to audios fragment -->
    <string name="audio_download">Download</string>
    <string name="search_audios_hint">Search…</string>
    <string name="cannot_download_without_permission">Access to external storage denied.</string>
    <string name="audio_actions_dialog_title">Actions</string>
    <string-array name="audio_actions">
        <item>@string/audio_download</item>
    </string-array>


    <!-- Strings related to audio download notifications view -->
    <string name="download_pending">Download pending</string>
    <string name="download_canceled">Download canceled</string>
    <string name="download_failed">Download failed</string>
    <string name="download_complete">Download complete</string>

    <!-- Permissions -->
    <string name="action_grant_permission">Grant</string>
    <string name="write_external_storage_rational">Access to external storage is required for files downloading</string>

    <!-- audio sync settings -->
    <string name="audio_sync_settings_title">Audio sync</string>
    <string name="audio_sync_settings_sync_audios">Sync audios in background</string>
    <string name="audio_sync_settings_sync_audios_summary">Automatically update list of audios in background and download missing audios</string>
    <string name="audio_sync_settings_sync_only_via_wifi">Only via WiFi</string>
    <string name="audio_sync_settings_interval_title">Interval</string>
    <string name="audio_sync_settings_interval_dialog_title">Select interval</string>
    <string-array name="audio_sync_settings_interval_entries">
        <item>1h</item>
        <item>2h</item>
        <item>4h</item>
        <item>8h</item>
    </string-array>
    <string-array name="audio_sync_settings_interval_entry_values">
        <item>3600000</item> <!-- 1 * 60 * 60 * 1000 -->
        <item>7200000</item> <!-- 2 * 60 * 60 * 1000 -->
        <item>14400000</item> <!-- 4 * 60 * 60 * 1000 -->
        <item>28800000</item> <!-- 8 * 60 * 60 * 1000 -->
    </string-array>
</resources>
